--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Notes app" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Notes</title>
+    <script
+      src="https://kit.fontawesome.com/ebb4b3a097.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
